<resources>
    <string name="app_name">ADTEX Neuromuscular Monitor Ver.2.7</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_reconnect">reconnect</string>
    <string name="save_btn">SAVE</string>
    <string name="setting_btn">Settings</string>
    <string name="gain_up">Gain+</string>
    <string name="gain_down">Gain-</string>
    <string name="gain1_up">Ch1 Gain+</string>
    <string name="gain1_down">Ch1 Gain-</string>
    <string name="gain2_up">Ch2 Gain+</string>
    <string name="gain2_down">Ch2 Gain-</string>
    <string name="file_open_btn">file open</string>
    <string name="file_save_btn">file save</string>
    <string name="bluetooth_error">This App do not have permission to use BLE.</string>
    <string name="permission_phone">Access the phone function to acquire unique information of the model. Please allow access to the phone function.</string>
    <string name="permission_storage">Please allow access to the file to save and read the data.</string>
    <string name="permission_location">Access to location information is necessary to connect with BLE equipment. please allow.</string>
    <string name="permission_internet">Access to the Internet is necessary for uploading data with FTP. please allow.</string>
    <string name="settings">Settings</string>
    <string name="recalc_btn">Re Calc</string>
    <string name="back">　Back　</string>
    <string name="h_ComKind">Number of sensors</string>
    <string name="h_ComKind2">Current setting</string>
    <string name="com_kind_select0">One sensor</string>
    <string name="com_kind_select1">Two sensors</string>
    <string name="h_disconnect_time">Time (min.) from End of Measurement to Breakage of BLE Connection(min.)</string>
    <string name="text_font_size">Specify Text Font Size (5～99)</string>
    <string name="mem_font_size">Specify Scale Font Size (5-99)</string>
    <string name="h_mem_font_size2">Current setting : </string>
    <string name="btn_font_size">Specify button Font Size.(5～99)</string>
    <string name="low_band_pass_freq1">Cutoff frequency1 of band pass filter for respiratory wave.</string>
    <string name="low_band_pass_freq2">Cutoff frequency2 of band pass filter for respiratory wave</string>
    <string name="hi_pass_freq">Cutoff frequency of high pass filter for muscle wave.</string>
    <string name="band_pass_freq1">Cutoff frequency1 of band pass filter for heart beat wave.</string>
    <string name="band_pass_freq2">Cutoff frequency2 of band pass filter for heart beat wave.</string>
    <string name="device_name">Device name of the BLE</string>
    <string name="ble_log_check">Recording the communication log of BLE</string>
    <string name="ble_log_check2">Recording the communication log of BLE</string>
    <string name="btn_ok">OK</string>
    <string name="alert_end">Are you sure to terminate ?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_terminate">Terminate</string>
    <string name="alert_NotConnect">Cannot start USB Serial.\nPlease connect USB Serial device.</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="paired">paired</string>
    <string name="pause"> pause on </string>
    <string name="hardcopy">hard copy</string>
    <string name="certify_timeout_err">Time-out error in the authentication of the machine has occurred.</string>
    <string name="certify_err">It failed to authenticate with AYAP5.</string>
    <string name="certify_ok">Authentication was successful.</string>
    <string name="h_BaudRate">Baud Rate</string>
    <string name="h_BaudRate2">The current Baud Rate</string>
    <string name="h_DataBit">Data Bit</string>
    <string name="h_DataBit2">The current Data Bit</string>
    <string name="h_ParityBit">Parity</string>
    <string name="h_ParityBit2">The current Parity</string>
    <string name="h_StopBit">Stop Bit</string>
    <string name="h_StopBit2">The current Stop Bit</string>
    <string name="h_FlowControl">Flow Control</string>
    <string name="h_FlowControl2">The current Flow Control</string>
    <string name="param_err">Numerical value has not been entered correctly.</string>
    <string name="Tap_Start_Button">Tap the [CHECK] button to begin measurement.</string>
    <string name="Cannot_Open_In_Measure">The file cannot be opened during measurement. Press the [STOP] button, and open the file.</string>
    <string name="Cannot_DEAL">The selected file can not be read.</string>
    <string name="senser_distance">Distance between sensors</string>
    <string name="is_end">Program terminates. Is it OK?</string>
    <string name="end">End</string>
    <string name="absolute_time_flg">The horizontal axis of the graph is expressed in absolute time.</string>
    <string name="h_MemSwitch">Changing vertical scale</string>
    <string name="h_MemSwitch2">Current setting</string>
    <string name="h_MemSwitchRight">Pulse scale is on the right side.</string>
    <string name="h_MemSwitchLeft">Pulse scale is on the left side.</string>
    <string name="MuscleWave">Muscle</string>
    <string name="HeartWave">Heart beat</string>
    <string name="BreathingWave">Breathing</string>
    <string name="PulseWave">Pulse</string>
    <string name="h_CalcGraphAve">Average value or instantaneous value</string>
    <string name="calc_graph_ave_select0">Display values and graphs with instantaneous values.</string>
    <string name="calc_graph_ave_select1">Display values and graphs with average values.</string>
    <string name="h_average_time">Average calculation data count</string>
    <string name="Heart_Rate_Upper">Upper limit of heart rate</string>
    <string name="Heart_Rate_Lower">Lower limit of heart rate</string>
    <string name="Respiratory_Rate_Upper">Upper limit of respiratory rate</string>
    <string name="ch1_raw_graph_check">Display raw waveform of channel 1</string>
    <string name="ch2_raw_graph_check">Display raw waveform of channel 2</string>
    <string name="hr_check">Display heart rate graph</string>
    <string name="rr_check">Display respiratory rate graph</string>
    <string name="T1_check">Display T1 amplitude graph</string>
    <string name="T1_ratio_check">Display T1 control value ratio graph</string>
    <string name="TOF_check">Display TOF graph</string>
    <string name="PTC_check">Display PTC graph</string>
    <string name="T4_check">Display T4/T1 graph</string>
    <string name="Hart_Amp_Mag">Heart beat wave amplitude magnification.</string>
    <string name="Respiratory_Amp_Mag">Respiratory beat wave amplitude magnification.</string>
    <string name="TOF1_Amp_Mag">Neuromuscular wave amplitude magnification.</string>
    <string name="auto_gain_check">Auto gain control.</string>
    <string name="setting_ble">BLE settings</string>
    <string name="setting_pulse">Pulse settings</string>
    <string name="setting_correction">Neuromuscular simulation mode</string>
    <string name="Calibration_Start">Calibration Start current value(mA)</string>
    <string name="Calibration_Step">Calibration Step current value(mA)</string>
    <string name="Current_Value">Current value(mA)</string>
    <string name="Detection_Threshold">Detection threshold(Muscle contraction signal ratio during maximal superior nerve stimulation)(%)</string>
    <string name="Pulse_Width">pulse width(μsec)</string>
    <string name="Twitch_Interval">Twitch interval(sec)</string>
    <string name="TOF_STIM_INTERVAL">TOF stimulation interval(sec)</string>
    <string name="TOF_INTERVAL">TOF interval(sec)</string>
    <string name="TOF_TIME_LIMIT">TOF manual time limit(sec)</string>
    <string name="PTC_Twitch1_NUM">PTC Twitch1 number of stimulations</string>
    <string name="PTC_TET_STIM_FREQ">PTC TET stimulation frequency(Hz)</string>
    <string name="PTC_TET_STIM_TIME">PTC TET stimulation time(sec)</string>
    <string name="PTC_Twitch2_NUM">PTC Twitch2 number of stimulations</string>
    <string name="PTC_AUTO_INTERVAL">PTC automatic repeat time(sec)</string>
    <string name="PTC_TIME_LIMIT">PTC time limit(sec)</string>
    <string name="DBS_STIM_INTERVAL">DBS stimulation interval(msec)</string>
    <string name="DBS_1_2_INTERVAL">DBS 1-2 interval(sec)</string>
    <string name="DBS_1_1_INTERVAL">DBS 1-1 interval(sec)</string>
    <string name="DBS_PATTERN">DBS burst pattern</string>
    <string name="DBS_TIME_LIMIT">DBS time limit(sec)</string>
    <string name="TET_STIM_FREQ">TET Stimulation frequency(Hz)</string>
    <string name="TET_STIM_TIME">TET Stimulation time(sec)</string>
    <string name="TET_TIME_LIMIT">TET Time limit(sec)</string>
    <string name="auto_save">Auto save with [STOP]</string>
    <string name="auto_save2">At continuous measurement, it is automatically saved with the [STOP] tap.</string>
    <string name="Calibration_Interval">Calibration pulse output interval(msec)</string>
    <string name="Calibration_Ave">Calibration pulse intensity number of moving average</string>
    <string name="AUTO_PILOT_PTC_LEVEL">PTC threshold for returning from PTC to TOF in Auto Pilot</string>
    <string name="BatteryType">Battery type</string>
    <string name="Correction_kind">Neuromuscular simulation mode</string>
    <string name="ACh_receptors">Initial number of ACh receptors (10,000)</string>
    <string name="ACh_block_rate">Muscle relaxation depth initial (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_5m">Muscle relaxation depth 5m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_10m">Muscle relaxation depth 10m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_15m">Muscle relaxation depth 15m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_20m">Muscle relaxation depth 20m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_25m">Muscle relaxation depth 25m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_30m">Muscle relaxation depth 30m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_35m">Muscle relaxation depth 35m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_40m">Muscle relaxation depth 40m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_45m">Muscle relaxation depth 45m after (ACh receptor block rate 0-100%)</string>
    <string name="ACh_block_rate_50m">Muscle relaxation depth 50m after (ACh receptor block rate 0-100%)</string>
    <string name="blocks_one_stim">Number of ACh receptor blocks by one nerve stimulation (10,000)</string>
    <string name="recovery_half_life">ACh receptor recovery half-life t1 / 2 (sec)</string>
    <string name="PTP">Increased amount by one nerve stimulation (PTP)</string>
    <string name="PTP_Half_life">Half-life of ACh increase (PTP) t1 / 2 (sec)</string>
    <string name="correction_log_check">Record muscle contraction signal amount calculation log</string>
</resources>